--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@auth/prisma-adapter": "^1.6.0",
     "@prisma/client": "^5.15.0",
     "bcryptjs": "^2.4.3",
-    "next": "14.1.4",
+    "next": "^14.2.12",
     "next-auth": "^5.0.0-beta.16",
     "react": "^18",
     "react-dom": "^18"
